fix: adjust padding for button component for better alignment

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -8,7 +8,7 @@
   border: none;
   border-radius: 10px;
   height: 32px;
-  padding: 4px 12px;
+  padding: 8px;
   gap: 8px;
 
   cursor: pointer;
